--- a/file_viewer/pdf/index.html
+++ b/file_viewer/pdf/index.html
@@ -46,8 +46,8 @@
                         </a>
                         <div class="dropdown-menu"><a class="dropdown-item" href="#">User Information</a><a class="dropdown-item" href="#">Account Information</a><a class="dropdown-item" href="javascript:logout()">logout</a></div>
                     </li>
-                    <li class="nav-item" id="login"><a class="nav-link active" href="login/index.html">Login</a></li>
-                    <li class="nav-item" id="signup"><a class="nav-link active" href="signup/index.html">Signup</a></li>
+                    <li class="nav-item" id="login"><a class="nav-link active" href="/login/index.html">Login</a></li>
+                    <li class="nav-item" id="signup"><a class="nav-link active" href="/signup/index.html">Signup</a></li>
                 </ul>
             </div>
         </div>
