--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 <link rel="icon" type="image/x-icon" href="/logo.png"><link rel="icon" type="image/x-icon" href="/logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>J.A.R.V.I.Z.</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9851237424755952"
+     crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fira+Code&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,700&amp;display=swap">
@@ -45,8 +47,8 @@
                         </a>
                         <div class="dropdown-menu"><a class="dropdown-item" href="#">User Information</a><a class="dropdown-item" href="#">Account Information</a><a class="dropdown-item" href="javascript:logout()">logout</a></div>
                     </li>
-                    <li class="nav-item" id="login"><a class="nav-link active" href="login/index.html">Login</a></li>
-                    <li class="nav-item" id="signup"><a class="nav-link active" href="signup/index.html">Signup</a></li>
+                    <li class="nav-item" id="login"><a class="nav-link active" href="/login/index.html">Login</a></li>
+                    <li class="nav-item" id="signup"><a class="nav-link active" href="/signup/index.html">Signup</a></li>
                 </ul>
             </div>
         </div>
