--- a/index.html
+++ b/index.html
@@ -21,9 +21,18 @@
     <link rel="stylesheet" href="assets/css/textarea.compiled.css">
     <link rel="stylesheet" href="assets/css/download.compiled.css">
     <link rel="stylesheet" href="assets/css/like.compiled.css">
-<script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-app.js"></script>    
+    <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-app.js"></script>    
     <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-firestore.js"></script>
+    <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" defer></script>
+    <script>
+        window.OneSignal = window.OneSignal || [];
+        OneSignal.push(function() {
+            OneSignal.init({
+            appId: "bcc571d1-bc38-4c1d-8640-efd6e82f0af8",
+            });
+        });
+    </script>
 </head>
 
 <body>
