--- a/subject/4thsemester/index.html
+++ b/subject/4thsemester/index.html
@@ -6,8 +6,6 @@
 <link rel="icon" type="image/x-icon" href="\assets\img\logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>J.A.R.V.I.Z.</title>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9851237424755952"
-     crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../../assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fira+Code&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,700&amp;display=swap">
@@ -18,7 +16,7 @@
     <link rel="stylesheet" href="../../assets/css/Pricing-Centered-badges.css">
     <link rel="stylesheet" href="../../assets/css/Projects-Grid-images.css">
     <link rel="stylesheet" href="../../assets/css/sticky-dark-top-nav-with-dropdown.css">
-    <script>(function(s,u,z,p){s.src=u,s.setAttribute('data-zone',z),p.appendChild(s);})(document.createElement('script'),'https://inklinkor.com/tag.min.js',5910044,document.body||document.documentElement)</script>
+    <script type='text/javascript' src='//pl19414061.highrevenuegate.com/26/93/3c/26933c6861e59eab30f7274863609ae4.js'></script>
     <link rel="stylesheet" href="../../assets/css/textarea.compiled.css">
     <link rel="stylesheet" href="../../assets/css/download.compiled.css">
     <link rel="stylesheet" href="../../assets/css/like.compiled.css">
